--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.0+2
   provider: ^5.0.0
-  firebase_core: "^0.7.0"
-  firebase_auth: "^0.20.1"
+  firebase_core: ^1.0.1
+  firebase_auth: ^1.0.1
   lottie: ^1.0.1
   font_awesome_flutter: ^8.12.0
+  google_sign_in: ^5.0.0 
+  
 
 
 
